# my-cli

./: Cargo.toml  README.md  query_packet.txt  response_packet.txt
src/: dns.rs  ipstring.rs  lib.rs  main.rs
src/dns/: authority.rs  buffer.rs  cache.rs  client.rs  context.rs  format.rs  netutil.rs  protocol.rs  resolve.rs  server.rs
